--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@ main {
     justify-content: center;
     border-style: dashed;
     border-color: gold;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
     margin: 10px 0;
 }
 .op__c {
