--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ body {
     background-color: black;
 }
 
+.botonNav {
+    border-style: solid;
+    border-radius: 5px;
+    margin: 5px 0;
+}
 .logo {
     height: 50px;
     margin-right: 20px;
@@ -59,7 +64,7 @@ main {
     font-size: 20px;
 
 }
-.logo__somos {
+.somos__logo {
     width: 400px;
     height: 400px;
     transition: all 0.3s;
@@ -67,24 +72,25 @@ main {
 
 /* Movimiento del logo */
 
-.logo__somos:hover {
+.somos__logo:hover {
     transform: translate(15px, 10px);
     border-radius: 20px;
     border-style: double;
     border-color: gold;
 }
 /* Opiniones */
-
-.opGrid {
-    display: grid;
-    grid-template-rows: repeat(2,auto);
-}
 .op__titulo{
     padding: 10px;
     display: flex;
     justify-content: center;
 }
-.opiniones {
+
+.opGrid {
+    display: grid;
+    grid-template-rows: repeat(2,auto);
+}
+
+.opGrid__opiniones {
     display: flex;
     justify-content: center;
     border-style: dashed;
@@ -93,7 +99,7 @@ main {
     align-items: center;
     margin: 10px 0;
 }
-.op__c {
+.opGrid__opiniones-cliente{
     border-style: solid;
     border-radius: 10px;
     background-color: black;
@@ -101,15 +107,17 @@ main {
     padding: 10px;
     margin: 5px 0;
 }
-.op__op {
+
+.opGrid__opiniones-descrip {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    }
+
+.opGrid__opiniones-calif {
     border-style: solid;
     border-radius: 5px;
     margin: 5px 0;
-}
-
-.infoTrabajos{
-    padding: 10px;
-    margin: 10px;
 }
 
 /* Trabajos realizados  */
@@ -161,43 +169,34 @@ main {
     justify-content: center;
     padding: 10px;
 }
-.titulo2 {
-    font-size: 20px;
-    font-weight: bold;
-    color: black;
-}
 
-
-
-.imgTrabajo {
-    width: 200px; 
-    height: 300px;
-    padding: 5px 0;
-}
 .boton {
     background-color: yellow;
     color: black;
-    /* border-radius: 5px;
-    margin: 5px 0; */
-
 }
 
+.trab {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: space-around;
+    padding: 20px ;
+}
 /* FOOTER */
 
-.contactos{
+.footer{
     height: 80px;
     background-color: black;
 }
 
 /* Animacion de footer */
 
-.efectoFoot{
+.footer__efecto{
     color: yellow;
     padding: 5px;
     font-size: 20px;
     transition: all 0.3s;
 }
-.efectoFoot:hover{
+.footer__efecto:hover{
     border-radius: 5px;
     background-color: yellow;
     color: black;
@@ -217,40 +216,36 @@ main {
     justify-items: center;
     padding: 5px;
 }
-.botonOp {
+.cuadroOp__titulo{
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+}
+.cuadroOp__boton {
     background-color: beige;
     color: rgb(184, 101, 12);
     padding: 5px;
     border-radius: 5px;
     border-color: black;
 }
-.op__ti{
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    font-weight: bold;
-}
 
-.descOpinion {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    }
+
 
 /* TRABAJOS REALIZADOS */
 
-.trab {
+/* .trab {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: space-around;
     padding: 20px ;
-}
+} */
 
-.descTrabajo {
+/* .descTrabajo {
     display: flex;
     justify-content: center;
     padding: 10px;
-}
+} */
 
 /* SERVICIOS */
 
@@ -263,7 +258,7 @@ main {
     border:  20px;
     background-position: center;
 }
-.serv {
+.servicios__info {
     padding: 10px;
     list-style: decimal;
 }
@@ -277,31 +272,35 @@ table td {
 table th {
     padding: 5px;
 }
-.titulServ {
+.tablaCostos__titulo {
     display: flex;
     justify-content: center;
 }
-.tablaServicios {
+.tablaCostos {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 /* CONTACTENOS */
+.mainContactenos {
+    background-image: url(../imagenes/bombilla-fluorescente.webp);
+    background-size: cover;
+}
 
-.contacto{
+.mainContactenos__contacto{
     display: grid;
     grid-template-rows: repeat(2, auto);
     row-gap: 5px;
     justify-content: center;
     color: gold;
 }
-.centradoContacto{
+.mainContactenos__contacto-centrado {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.contactoGrid{
+.mainContactenos__contacto-contactoGrid{
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 5px;
@@ -309,20 +308,15 @@ table th {
     align-items: center;
     color: gold;
 }
-.tituloContacto {
+.mainContactenos__contacto-titulo {
     justify-self: center;
 }
 
-.main__contactenos {
-    background-image: url(../imagenes/bombilla-fluorescente.webp);
-    background-size: cover;
-}
-
-.aniContacto {
+.mainContactenos__contacto-animacion {
     transition: all 0.3s;
 }
 
-.aniContacto:hover {
+.mainContactenos__contacto-animacion:hover {
     transform: scale(1.2);
     background-color: yellow;
     color: black;
@@ -339,8 +333,9 @@ table th {
     } */
     .trab {
         grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
     }
-    .logo__somos {
+    .somos__logo {
         display: none;
     }
     .somos{
@@ -361,6 +356,7 @@ table th {
     .trab {
         display: grid;
         grid-template-columns: 1fr;
+        justify-items: center;
     }
     .servicios {
         display: grid;
@@ -370,16 +366,16 @@ table th {
 }
 
 @media screen and (max-width: 480px) {
-    .contactos{
+    /* .footer{
         display: grid;
         grid-template-columns: 1fr 1fr;
         justify-content: space-evenly;
         height: 100px;
-    }
-    .servicios {
+    } */
+    /* .servicios {
         background-image: linear-gradient(45deg,rgb(77, 77, 20), gold);
-    }
-    .tablaServicios {
+    } */
+    .tablaCostos {
         align-items: flex-start;
     }
     .trabajos{
@@ -390,7 +386,7 @@ table th {
     
 }
 
-@media screen and (max-width:320px) {
+/* @media screen and (max-width:320px) {
     .titulo2 {
         display: grid;
         padding: 5px;
@@ -399,5 +395,5 @@ table th {
         color: black;
     }
     
-}
+} */
 
