--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -14,9 +15,12 @@ main {
 .header {
   background-color: black; }
 
+.bot, .botonNav, .colorNav, .colorNav:hover {
+  color: black;
+  border-radius: 10px; }
+
 .botonNav {
   border-style: solid;
-  border-radius: 5px;
   margin: 5px 0; }
 
 .logo {
@@ -25,13 +29,9 @@ main {
 
 .colorNav {
   color: gold;
-  border-radius: 10px;
   transition: all 0.3s; }
-
-.colorNav:hover {
-  border-radius: 5px;
-  background-color: gold;
-  color: black; }
+  .colorNav:hover {
+    background-color: gold; }
 
 .somos {
   display: grid;
@@ -103,22 +103,25 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 100%; }
+  justify-content: center; }
 
 /* Efecto de las tarjetas */
 .sombra {
   background-color: black;
   color: white;
   transition: all 0.3s; }
-
-.sombra:hover {
-  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.4);
-  transform: scale(1.05); }
+  .sombra:hover {
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.4);
+    transform: scale(1.05); }
 
 .imagenT {
   width: 100%;
   height: 100%; }
+
+.tamañoCarousel {
+  max-height: 50vh;
+  width: 100%;
+  max-width: 400px; }
 
 .tituloTarjeta {
   display: flex;
@@ -128,8 +131,7 @@ main {
 .titulo__trab {
   font-size: 30px;
   display: flex;
-  justify-content: center;
-  padding: 10px; }
+  justify-content: center; }
 
 .boton {
   background-color: yellow;
@@ -139,7 +141,7 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: space-around;
-  padding: 20px; }
+  padding: 0px 10px; }
 
 /* OPINIONES */
 .cuadroOp {
@@ -164,7 +166,7 @@ main {
 .servicios {
   display: grid;
   grid-template-columns: repeat(2, auto);
-  justify-content: start;
+  justify-content: space-evenly;
   align-items: start;
   padding: 20px;
   border: 20px;
@@ -184,17 +186,16 @@ main {
 table {
   border: black 2px solid;
   padding: 10px; }
-
-table td {
-  padding: 5px; }
-
-table th {
-  padding: 5px; }
+  table td {
+    padding: 10px; }
+  table th {
+    padding: 10px; }
 
 /* CONTACTENOS */
 .mainContactenos {
-  background-image: url(../imagenes/bombilla-fluorescente.webp);
-  background-size: cover; }
+  background-image: url(../imagenes/lamparasNoche.jpg);
+  background-size: cover;
+  background-position: center; }
   .mainContactenos__contacto {
     display: grid;
     grid-template-rows: repeat(2, auto);
