--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -2,15 +2,15 @@
 .somos{
     display: grid;
     grid-template-columns: 400px auto;
-    color: $night;
+    color: map-get($map: $colores, $key: night);
     border-style: double;
-    border-color: $night;
+    border-color: map-get($map: $colores, $key: night);
     &__titulo{
         display: flex;
         justify-content: center;
         padding: 10px;
         border-style: double;
-        border-color: $gold;
+        border-color: map-get($map: $colores, $key: gold1);
     }
     &__desc{
         display: flex;
@@ -27,7 +27,7 @@
             transform: translate(15px, 10px);
             border-radius: 20px;
             border-style: double;
-            border-color: $gold;
+            border-color: map-get($map: $colores, $key: gold1);
         }
     }
 }
@@ -46,7 +46,7 @@
         display: flex;
         justify-content: center;
         border-style: dashed;
-        border-color: $gold;
+        border-color: map-get($map: $colores, $key: gold1);
         flex-direction: column;
         align-items: center;
         margin: 10px 0;
@@ -54,8 +54,8 @@
         &-cliente{
             border-style: solid;
             border-radius: 10px;
-            background-color: $night;
-            color: $gold;
+            background-color: map-get($map: $colores, $key: night);
+            color: map-get($map: $colores, $key: gold1);
             padding: 10px;
             margin: 5px 0;
         }
@@ -89,26 +89,30 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
 }
 
 
 /* Efecto de las tarjetas */
 
 .sombra {
-    background-color: $night;
-    color: $light;
+    background-color: map-get($map: $colores, $key: night);
+    color: map-get($map: $colores, $key: light1);
     transition: all 0.3s;
+    &:hover {
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.4);
+        transform: scale(1.05);
     }
-
-.sombra:hover {
-    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.4);
-    transform: scale(1.05);
-}
+    }
 
 .imagenT {
     width: 100%;
     height: 100%;
+}
+
+.tamañoCarousel {
+    max-height: 50vh;
+    width: 100%;
+    max-width: 400px;
 }
 
 .tituloTarjeta {
@@ -121,20 +125,23 @@
     font-size: 30px;
     display: flex;
     justify-content: center;
-    padding: 10px;
 }
 
+@mixin botones ($back, $color) {
+    background-color: $back;
+    color:$color;
+}
 .boton {
-    background-color: $yell;
-    color: $night;
+    @include botones(map-get($map: $colores, $key: yell),map-get($map: $colores, $key: night) );
 }
 
 .trab {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: space-around;
-    padding: 20px ;
+    padding: 0px 10px;
 }
+
 
 /* OPINIONES */
 .cuadroOp {
@@ -150,11 +157,10 @@
         font-weight: bold;
     }
     &__boton {
-        background-color: beige;
-        color: rgb(184, 101, 12);
+        @include botones(beige,rgb(184, 101, 12) ) ;
         padding: 5px;
         border-radius: 5px;
-        border-color: $night;
+        border-color: map-get($map: $colores, $key: night);
     }
 }
 
@@ -163,7 +169,7 @@
 .servicios {
     display: grid;
     grid-template-columns: repeat(2,auto);
-    justify-content: start;
+    justify-content: space-evenly;
     align-items: start;
     padding: 20px;
     border:  20px;
@@ -173,6 +179,7 @@
         list-style: decimal;
     }
 }
+
 
 .tablaCostos {
     display: flex;
@@ -185,28 +192,30 @@
 }
 
 table {
-    border: $night 2px solid;
+    border: map-get($map: $colores, $key: night) 2px solid;
     padding: 10px;
+    & td {
+        padding: 10px;
+    }
+    & th {
+        padding: 10px;
+    }
 }
-table td {
-    padding: 5px;
-}
-table th {
-    padding: 5px;
-}
+
 
 
 /* CONTACTENOS */
 .mainContactenos {
-    background-image: url(../imagenes/bombilla-fluorescente.webp);
+    background-image: url(../imagenes/lamparasNoche.jpg);
     background-size: cover;
+    background-position: center;
 
     &__contacto{
         display: grid;
         grid-template-rows: repeat(2, auto);
         row-gap: 5px;
         justify-content: center;
-        color: $gold;
+        color: map-get($map: $colores, $key: gold1);
         &-centrado {
             display: flex;
             flex-direction: column;
@@ -218,7 +227,7 @@ table th {
             row-gap: 5px;
             justify-items: center;
             align-items: center;
-            color: $gold;
+            color: map-get($map: $colores, $key: gold1);
         }
         &-titulo {
             justify-self: center;
@@ -227,8 +236,8 @@ table th {
             transition: all 0.3s;
             &:hover {
                 transform: scale(1.2);
-                background-color: $yell;
-                color: $night;
+                background-color: map-get($map: $colores, $key: yell);
+                color: map-get($map: $colores, $key: night);
             }
             
         }
@@ -249,7 +258,7 @@ table th {
         display: grid;
         grid-template-columns: 1fr;
         border-style: double;
-        border-color: gold;
+        border-color: map-get($map: $colores, $key: gold1);
     }
 
 }
