--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,7 @@
-$gold: gold;
-$night: black;
-$light: white;
-$yell: yellow;
-$back: linear-gradient(45deg,rgb(77, 77, 20), gold);
+$colores: (
+    gold1: gold,
+    night: black,
+    light1: white,
+    yell: yellow,
+    back: linear-gradient(45deg,rgb(77, 77, 20), gold),
+    )
