--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -8,7 +8,7 @@
     &__titulo{
         display: flex;
         justify-content: center;
-        padding: 10px;
+        padding: 20px;
         border-style: double;
         border-color: map-get($map: $colores, $key: gold1);
     }
@@ -125,6 +125,7 @@
     font-size: 30px;
     display: flex;
     justify-content: center;
+    padding: 0px 30px;
 }
 
 @mixin botones ($back, $color) {
@@ -209,7 +210,6 @@ table {
     background-image: url(../imagenes/lamparasNoche.jpg);
     background-size: cover;
     background-position: center;
-
     &__contacto{
         display: grid;
         grid-template-rows: repeat(2, auto);
@@ -227,7 +227,8 @@ table {
             row-gap: 5px;
             justify-items: center;
             align-items: center;
-            color: map-get($map: $colores, $key: gold1);
+            color: map-get($map: $colores, $key: yell);
+            text-shadow: 4px 3px 4px rgb(0, 0, 0);
         }
         &-titulo {
             justify-self: center;
