--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,5 @@
+// Estilos del footer con sus animacones
+
 .footer{
     height: 80px;
     background-color: map-get($map: $colores, $key: night);
